--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -8,12 +8,12 @@
   <div class="center">
 	<h3>See Experiment</h3><br><br>		
 	 <video width="380" height="290" controls>
-        <source src="images/ffm.mp4" type="video/mp4">
+        <source src="images/impedence.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
 	<h2>Please Select one of the following to view the behavior</h2>
 	<a href="images/8YSZ SAMPLE.jpg" target="_blank">Arrhenius plots for the 8YSZ sample</a><br><br>
-	<a href="images/5ml.jpg" target="_blank">Arrhenius plots for the 5 wt.% CeO2 doped 8YSZ sample</a><br><br>
+	  <a href="images/5ml.jpg" target="_blank">Arrhenius plots for the 5 wt.% CeO<sub>2</sub> doped 8YSZ sample</a><br><br>
 	<a href="images/two samp.jpg" target="_blank">comparison between two samples</a><br><br>
 	</div>
 	
