--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -8,7 +8,7 @@
   <div class="center">
 	<h3>See Experiment</h3><br><br>		
 	 <video width="380" height="290" controls>
-        <source src="images/impedence.mp4" type="video/mp4">
+        <source src="images/impedance.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
 	<h2>Please Select one of the following to view the behavior</h2>
